--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "人民币大写",
     "navigationBarTextStyle":"black"
   }
 }
